[package]
name = "log-kvs"
version = "0.1.0"
authors = ["xiaoxineryi <xwk200207>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
structopt = {version = "0.3"}